--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,24 @@ dependencies:
   flutter_svg: ^1.1.0
   sums_inner: ^1.0.0+1
   intl: ^0.17.0
+  date_time_picker: ^2.1.0
+  camera: ^0.10.0
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.10
+  flutter_datetime_picker: ^1.5.1
+  dotted_border: ^2.0.0+2
+  flutter_masked_text: ^0.7.0
+  flutter_speed_dial: ^6.0.0
+  http: ^0.13.4
+  url_launcher: ^6.0.12
+  qr_code_scanner: ^1.0.0
+  qr_flutter: ^3.2.0
+  shared_preferences: ^2.0.15
+  flutter_secure_storage: ^5.1.0
+  flutter_pdfview: ^1.2.3
+  time_span: ^2.0.2
+  lottie: ^1.4.1
+  loader_overlay: ^2.0.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/icons/
+    - asset/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
